# surf-metadata-registry

./: LICENSE  Monitoring_on_dCache.md  README.md  demo_meta.json  example_user_meta.json  pyproject.toml
.github/workflows/: linter.yml
surfmeta/: __init__.py  __main__.py  ckan.py  ckan_conf.py  cli_handlers.py  cli_utils.py  dcache.py  dcache_utils.py  metadata_utils.py  search_utils.py  sys_utils.py  system_metadata.py  utils.py
tests/: test_ckan.py  test_list_cmd.py  test_search.py  test_search_cmd.py  test_system_meta.py
